fixed more spacing issues

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
 
 
 #topContainer{
-  width: 77%;
+  width: 76.5%;
   margin-left: 106px;
   padding: 10px;
   background-color: #d6d7d8;
